# abc-reading-evaluator

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/abc_reader/: __init__.py  __main__.py  acoustic.py  asr.py  comparator.py  config.py  downloader.py  fetcher.py  pipeline.py  publisher.py  reporter.py
