[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abc-reader"
version = "2.0.0"
description = "ABC Reading 学生朗读评测系统"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["education", "reading", "asr", "whisper", "evaluation"]
dependencies = [
    "faster-whisper>=1.0.0",
    "playwright>=1.40.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/kojie2008/abc-reading-reports"
Repository = "https://github.com/kojie2008/abc-reading-reports"

[project.scripts]
abc-eval = "abc_reader.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
